@@ -8,7 +8,6 @@ URGENT PROBLEMS
 Should handle these soon.
 
 - Make CLFSWM running with ECL
-- Handle screen heads changes on the fly (without the need to reset CLFSWM)
 
 
 FOR THE NEXT RELEASE
